@@ -1,3 +1,9 @@
+2009-03-25  Hans-Peter Nilsson  <hp@axis.com>
+
+	* elf32-cris.c (cris_elf_relocate_section) <case R_CRIS_32_GD>
+	<R_CRIS_16_GOT_GD, case R_CRIS_32_GOT_GD>: Handle COMMON symbols.
+	<case R_CRIS_16_TPREL, R_CRIS_32_TPREL>: Ditto.
+
 2009-03-24  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* cpu-i386.c (bfd_x86_64_arch_intel_syntax): Make it static.
